src/objects/Trial__c.object
<CustomObject>
    <description>Created to track customers&apos; trials, i.e Architect Pass trial, BOA trial, etc</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trials</relationshipLabel>
        <relationshipName>Trials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>AND (Pass_Start_Date__c &lt;=  TODAY(),Pass_End_Date__c &gt;=  TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pass_End_Date__c</fullName>
        <label>Pass End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pass_Start_Date__c</fullName>
        <label>Pass Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Trial__c</fullName>
        <label>Type of Trial</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOA EDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trial</label>
    <nameField>
        <displayFormat>Trial-{0000}</displayFormat>
        <label>Trial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>